[package]
name = "substrate-bip39"
version = "0.4.4"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2018"
description = "Converting BIP39 entropy to valid Substrate (sr25519) SecretKeys"
documentation = "https://docs.rs/substrate-bip39"
repository = "https://github.com/paritytech/substrate-bip39"

[dependencies]
pbkdf2 = { version = "0.9.0", default-features = false }
sha2 = "0.9.8"
hmac = "0.11.0"
schnorrkel = {  git = "https://github.com/gilescope/schnorrkel.git", rev="9d131c87d6fee37613727ac3d007a52c40bd3715"  }
zeroize = { version = "1.4.2", default-features = false }

[dev-dependencies]
tiny-bip39 = "0.8.2"
rustc-hex = "2.1.0"
