[package]
name = "substrate-bip39"
version = "0.4.5"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2021"
description = "Converting BIP39 entropy to valid Substrate (sr25519) SecretKeys"
documentation = "https://docs.rs/substrate-bip39"
repository = "https://github.com/paritytech/substrate-bip39"

[dependencies]
pbkdf2 = { version = "0.12.2", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
hmac = "0.12.1"
schnorrkel = { version = "0.11.4", default-features = false }
zeroize = { version = "1.0.0", default-features = false }

[dev-dependencies]
bip39 = "2.0.0"
rustc-hex = "2.1.0"

[features]
std = []
